fix: fix the titles overflow

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -43,6 +43,7 @@
 		padding: 0;
 		font-weight: 700;
 		font-size: 20px;
+		word-break: break-word;
 
 		&--about {
 			max-width: 560px;
@@ -58,7 +59,7 @@
 
 		&--job {
 			@include desktop {
-				grid-column: 1 / 2;
+				grid-column: 1 / 3;
 				grid-row: 1 / 2;
 			}
 		}
@@ -76,7 +77,7 @@
 
 		&--skills {
 			@include desktop {
-				grid-column: 1 / 2;
+				grid-column: 1 / 3;
 				grid-row: 1 / 2;
 			}
 		}
